syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Discount.Grpc.Protos";

service DiscountProtoService {
	rpc GetCoupon(GetCouponRequest) returns (CouponModel);
	rpc CreateCoupon(CreateCouponRequest) returns (CreateCouponResponse);
	rpc UpdateCoupon(UpdateCouponRequest) returns (UpdateCouponResponse);
	rpc DeleteCoupon(DeleteCouponRequest) returns (DeleteCouponResponse);
}

message GetCouponRequest {
	string code = 1;
}

message DeleteCouponRequest {
	string code = 1;
}

message CreateCouponRequest {
	CouponModel coupon = 1;
}
message UpdateCouponRequest {
	CouponModel coupon = 1;
}


message CreateCouponResponse {
	bool isSuccess = 1;
}

message UpdateCouponResponse {
	bool isSuccess = 1;
}

message DeleteCouponResponse {
	bool isSuccess = 1;
}


message CouponModel {
	int32 id = 1;
	string code = 2;
	string description = 3;
	int32 percent = 4;
	google.protobuf.Timestamp expirationDate = 5;
}